# Cloud-Native-AI

./: README.md  main.py
Fast_API_Creator/TaskManagement_API/: pyproject.toml  tasks.db
Pytest_skill/: SKILL.md  assertions.md  best-practices.md  conftest_template.py  coverage_report.py  fixtures-guide.md  generate_test.py  pytest.ini  run_pytest.py  test_template.py
Sql_Model_Creator/: .env.example  .gitignore  SKILL.md  database.py  main.py  migrations.md  pyproject.toml  queries.md  relationships.md  scaffold.py
Task_Manager_API/: README.md  test_tasks.py
job-post-workflow/: SETUP.md  config.json  config.template.json  job_post_FRONT_END_DEVELOPER_20260111_083935.txt  job_post_Frontend_developer_20260111_113314.txt  readme.txt  skill.md  workflow.py
task-management-api/: conftest.py  database.py  main.py  test.db
